--- a/jenkinsfile
+++ b/jenkinsfile
@@ -35,5 +35,14 @@ stage('Test image') {
           }
       }
     }
+
+  stage('Deploy Image') {
+      steps{
+          script {
+              sh "docker run -d $registry:$BUILD_NUMBER"
+          }
+      }
+    }
+
   }
 }
