--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
   }
   agent { 
         node {
-            label 'docker-agent'
+            label 'docker-agent-alpine'
             }
       }
   stages {
